Zombono
Release Notes:

Version 0.1.0-pre2
July XX, 2024

NEW FEATURES:
	* Rendering API version 12
		* Renamed Game_Init and Game_Shutdown to Init and Shutdown (as they are intended to be called, I fucked up renaming things)
	* A dedicated server binary, on Windows as well as Linux...

BUG FIXES:
	* Fixed the game crashing on minimise
		* Don't try and render if resolution width or height are zero
	* Fixed updater (TODO BEFORE RELEASE: TEST)
	* Fixed font list not being loaded from pak file

REMOVALS:

OTHER CHANGES:
* NOTE: con_line_length only has any effect on dedicated servers

Version 0.1.0-pre1 (Build 659)
June 29, 2024

NEW FEATURES:
	* Early version of new map - Hellspire
	* The way that game assets get loaded has changed!
		* The game name and asset path are now loaded from the gameinfo.json file instead of being hardcoded by default
		* You can still use +set game <name> (or the equivalent alias of +set game_asset_path <name>) to change the name of the game
	* Made many more physics parameters tunable CVars:
		* This adds the following CVars:
			* sv_friction
			* sv_waterfriction
			* sv_maxspeed_director
			* sv_maxspeed_player
			* sv_accelerate_director
			* sv_accelerate_player
			* sv_duckspeed
			* sv_accelerate
			* sv_wateraccelerate
			* sv_friction - default value of 6
			* sv_waterfriction - default value of 1
			* sv_stopspeed - default value of 100
	* Director players now drop their items when they die, but, unlike regular items, they despawn after 10 seconds instead of 30.
	* UIs are now stackable:
		* If a UI has its "stackable" field set using the UI_SetStackable function with the stackable parameter set to "true", the UI will enter into a stack.
			* UI_Push (as well as UI_SetEnabled) pushes the current UI, UI_Pop() pops it
			* Up to MAX_UIs (32) UIs can be stacked currently
			* You can't push the same UI to the stack twice in a row (in order to prevent bugs), but you can stack the same UI twice non-consecutively.